# rinha-interpreter.py

./: .gitignore  Dockerfile  README.md  cythonizer.py  pyproject.toml
examples/: benchmark.rinha.json  fib.json  fib.rinha  find.json  find.rinha
rinha_interpreter/: main.py
rinha_interpreter/core/: cli.py  environment.py  evaluate.py  parser.py  spec.py
